# rh-copilot

./: .gitignore  .vercelignore  DEPLOY.md  DOCUMENTATION.md  IMPROVEMENTS.md  QUICK-START.md  README.md  app.js  deploy.ps1  deploy.sh  docker-compose.yml  package.json  populate_demo.py  render.yaml  run.bat  supabase-schema.sql  vercel.json
api/: env.js
backend/: .env.example  dev.db  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: f21185881a94_init.py
backend/src/app/: __init__.py  main.py
backend/src/app/core/: auth.py  config.py  cors.py
backend/src/app/db/: models.py  session.py
backend/src/app/routers/: __init__.py  applications.py  auth.py  candidates.py  chat.py  cv_uploads.py  documents.py  employees.py  interview_notes.py  interviews.py  jobs.py  metrics.py  notifications.py  seed.py  tags.py  users.py
backend/src/app/schemas/: applications.py  auth.py  candidates.py  chat.py  documents.py  interview_notes.py  interviews.py  jobs.py  notifications.py  tags.py  users.py
backend/src/app/services/: ai_chatbot.py  ai_job_description.py  ai_resume_match.py
backend/tests/: conftest.py
deploy/: README.md  deploy.sh  nginx-rh-copilot.conf  rh-copilot-api.service
frontend/: README.md  app.js  app.py  config.py  index.html  styles.css
frontend/pages/: 1_RH_Dashboard.py  2_Criar_Vaga.py  3_Enviar_Curriculo.py  4_Chat_RH.py  5_Subir_Documentos.py
public/: styles.css
