[tool.poetry]
name = "rh-copilot-backend"
version = "0.1.0"
description = "RH Copilot API"
authors = ["you"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
sqlalchemy = "^2.0.0"
psycopg = "^3.1.0"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.9"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
